--- a/app/templates/email/password.twig
+++ b/app/templates/email/password.twig
@@ -3,5 +3,15 @@
 {% block subject %}{% trans %}{{brand}}: Password reset{% endtrans %}{% endblock %}
 
 {% block body %}
-<p>{% trans %}You (or somebody else) requested a password reset for your account.{% endtrans %}</p>
+<p style="margin:0px 0px 10px">{% trans %}You (or somebody else) requested a password reset for this account.{% endtrans %}<br>
+
+<p style="margin:0px 0px 10px">{% trans %}If you didn't request your password to be reset, simply ignore this email.{% endtrans %}<br>
+
+{% if not email_plain %}
+<p style="margin:0px 0px 10px">{% include 'email/functions/button.twig' with {'url' : reset_url, 'message' : 'Reset password'|trans } %}</p>
+{% else %}
+{% trans %}Just paste the following url into your browser:{% endtrans %}
+
+{{reset_url|raw}}
+{% endif %}
 {% endblock %}
