--- a/app/templates/email/activate.twig
+++ b/app/templates/email/activate.twig
@@ -1,14 +1,15 @@
 {% extends 'email/base.twig' %}
 
-{% block subject %}{% trans %}{{brand}}: Confirm your (new) email address{% endtrans %}{% endblock %}
-
-{% set this_link %}<a href="{{activation_url|raw}}">{% trans %}this link{% endtrans %}</a>{% endset %}
+{% block subject %}{% trans %}{{brand}}: Activate your account{% endtrans %}{% endblock %}
 
 {% block body %}
-	<p>{% trans %}You set your email address to {{email}}.{% endtrans %}</p>
+<p style="margin:0px 0px 10px">{% trans %}In order to use all features of {{brand}} you need to activate this new account.{% endtrans %}<br>
 
-	<p>{% trans %}To use all features of {{brand}} you need to activate this new address.{% endtrans %}<br>
-	{% trans %}Please open {{this_link}} to activate your address; or paste the following url into your browser:{% endtrans %}</p>
+{% if not email_plain %}
+<p style="margin:0px 0px 10px">{% include 'email/functions/buttons/success.twig' with {'url' : activation_url, 'message' : 'Activate account'|trans } %}</p>
+{% else %}
+{% trans %}Just paste the following url into your browser:{% endtrans %}
 
-	<p><strong>{{activation_url|raw}}</strong></p>
+{{activation_url|raw}}
+{% endif %}
 {% endblock %}
