--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -22,11 +22,11 @@
                         </div>
                         <div class="form-group">
                             <label for="subject">{% trans "Subject" %}</label>
-                            <input type="text" class="form-control" name="subject" id="url" value="">
+                            <input type="text" class="form-control" name="subject" id="url" value="{{subject}}" maxlength="72">
                         </div>
                         <div class="form-group">
                             <label for="url">{% trans "Message" %}</label>
-                            <textarea class="form-control contact-form" name="message" rows="7" required>{{message}}</textarea>
+                            <textarea class="form-control contact-form" name="message" rows="7" maxlength="2048" required>{{message}}</textarea>
                         </div>
                         <button class="btn btn-primary" type="submit">{% trans "Send message" %}</button>
                     </form>
