add translations for various strings

--- a/app/templates/publish/developers.twig
+++ b/app/templates/publish/developers.twig
@@ -33,7 +33,7 @@
 							</div>
 							{% else %}
 							<select class="form-control">
-								<option>{% trans %}There are no games available{% endtrans %}</option>
+								<option>{% trans %}No games available{% endtrans %}</option>
 							</select>
 							{% endif %}
 						</div>
