improve welcome email

--- a/app/templates/email/welcome.twig
+++ b/app/templates/email/welcome.twig
@@ -21,5 +21,6 @@
 {{activation_url|raw}}
 {% endif %}
 
-<br><p style="margin:0px 0px 10px">{% trans %}Thanks and have lots of fun,{% endtrans %}<br>B_E</p>
+<br><p style="margin:0px 0px 10px">{% trans %}Thanks and have lots of fun,{% endtrans %}
+<br>B_E</p>
 {% endblock %}
