update password reset mail text

--- a/app/templates/email/password.twig
+++ b/app/templates/email/password.twig
@@ -1,11 +1,11 @@
 {% extends 'email/base.twig' %}
 
-{% block subject %}{% trans %}{{brand}}: Password reset{% endtrans %}{% endblock %}
+{% block subject %}{% trans %}Forgot {{brand}} password{% endtrans %}{% endblock %}
 
 {% block body %}
-<p style="margin:0px 0px 10px">{% trans %}You (or somebody else) requested a password reset for this account.{% endtrans %}<br>
+<p style="margin:0px 0px 10px">{% trans %}You or someone else requested an email to reset your {{brand}} password.{% endtrans %}<br>
 
-<p style="margin:0px 0px 10px">{% trans %}If you didn't request your password to be reset, simply ignore this email.{% endtrans %}<br>
+<p style="margin:0px 0px 10px">{% trans %}If you requested this email you can login without a password for a single time:{% endtrans %}<br>
 
 {% if not email_plain %}
 <p style="margin:0px 0px 10px">{% include 'email/functions/button.twig' with {'url' : reset_url, 'message' : 'Reset password'|trans } %}</p>
@@ -14,4 +14,6 @@
 
 {{reset_url|raw}}
 {% endif %}
+
+<p style="margin:0px 0px 10px">{% trans %}Otherwise simply ignore this email.{% endtrans %}<br>
 {% endblock %}
