update password reset email strings

--- a/app/templates/email/password.twig
+++ b/app/templates/email/password.twig
@@ -15,5 +15,5 @@
 {{reset_url|raw}}
 {% endif %}
 
-<p style="margin:0px 0px 10px">{% trans %}Otherwise simply ignore this email.{% endtrans %}<br>
+<p style="margin:0px 0px 10px">{% trans %}Otherwise simply ignore this email.{% endtrans %} {% trans %}Please note: this link is only valid for a short period of time.{% endtrans %}<br>
 {% endblock %}
