--- a/app/templates/email/password.twig
+++ b/app/templates/email/password.twig
@@ -14,6 +14,6 @@
 
 {{reset_url|raw}}
 {% endif %}
-
-<p style="margin:0px 0px 10px">{% trans %}Otherwise simply ignore this email.{% endtrans %} {% trans %}Please note: this link is only valid for a short period of time.{% endtrans %}<br>
+<br>
+<p style="margin:0px 0px 10px">{% trans %}Otherwise simply ignore this email.{% endtrans %} {% trans %}Please note: this link is only valid for a short period of time.{% endtrans %}</p>
 {% endblock %}
