--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -138,7 +138,7 @@
 							{% endif %}
 							<div class="form-group">
 								<label for="password-new">{% trans "New password" %}</label>
-								<input type="password" class="form-control" name="password-new" id="password-new" required{% if not _show_old_password and focus_password %} autofocus{% endif %}>
+								<input type="password" class="form-control" name="password-new" id="password-new" required{% if (not _show_old_password) and focus_password %} autofocus{% endif %}>
 							</div>
 							<div class="form-group">
 								<label for="password-confirm">{% trans "Confirm password" %}</label>
