--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -25,7 +25,7 @@
 		{% endblock %}
 		<script>var base = '{{base}}', state = '{{state}}';</script>
 	</head>
-	<body
+    <body>
         <link href="{{resources}}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="{{resources}}/lorry/css/lorry.css" rel="stylesheet">
 		<noscript><style>.visible-js { display: none; }</style></noscript>
