--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -14,7 +14,7 @@
 			<a href="{{filename}}?sort=rating{% if sort == 'rating' and not reverse %}&reverse=1{% endif %}">{% trans %}by rating{% endtrans %}</a>{% if sort == 'rating' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %}
 		{% endset %}
 		{% set createaddon %}
-			<a href="{{base}}/developers?create={{short}}">{% trans %}create a new addon{% endtrans %}</a>
+			<a href="{{base}}/developers?create={{namespace}}">{% trans %}create a new addon{% endtrans %}</a>
 		{% endset %}
 		<!--<p class="sort-bar">{% trans %}Sort by {{columns}} or {{createaddon}} for this game.{% endtrans %}	</p>!-->
 		<ul class="media-list addons">
@@ -26,12 +26,12 @@
 	{% else %}
 	<div class="jumbotron">
 		<div class="container">
-			<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right jumbo-image hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">
+			<img src="{{resources}}/custom/game/{{namespace}}.png" class="pull-right jumbo-image hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">
 			<h2>{% trans %}No addons available{% endtrans %}</h2>
 			<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
 			{% if user_login %}
 				<p>
-					<a href="{{base}}/developers?create={{short}}" class="btn btn-primary btn-lg">{% trans %}New {{game}} addon{% endtrans %}</a>
+					<a href="{{base}}/developers?create={{namespace}}" class="btn btn-primary btn-lg">{% trans %}New {{game}} addon{% endtrans %}</a>
 				</p>
 			{% endif %}
 		</div>
