fix short/namespace renaming in various templates

--- a/app/templates/functions/addon.twig
+++ b/app/templates/functions/addon.twig
@@ -1,4 +1,4 @@
-{% set _addon_url %}{{base}}/addons/{% if addon.game %}{{addon.game.short}}{% else %}{{short}}{% endif %}/{{addon.short}}{% if addon.version %}/{{addon.version}}{% endif %}{% endset %}
+{% set _addon_url %}{{base}}/addons/{% if addon.game %}{{addon.game.namespace}}{% else %}{{namespace}}{% endif %}/{{addon.namespace}}{% if addon.version %}/{{addon.version}}{% endif %}{% endset %}
 {% set _addon_translation = attribute(addon, 'getTranslation', [display_language]) %}
 <li class="media media-addon">
     <a href="{{_addon_url}}" class="pull-left">
