--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -17,7 +17,7 @@
 						{% for banner in banners %}
 						<div class="item{% if loop.first %} active{% endif %}">
                             {% if banner.url %}<a href="{{banner.url}}">{% endif %}
-								<img src="{{banner.imageUrl}}" alt="{{bannner.alt}}">
+								<img src="{{assets}}/{{banner.image_filename}}.png" alt="{{bannner.title}}">
                             {% if banner.url %}</a>{% endif %}
 							<div class="carousel-caption">
 								<h3>
