replace Aura.SqlQuery with Doctrine on about page

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -69,8 +69,8 @@
 				<dl>
 					<dt><a href="http://twig.sensiolabs.org">Twig</a>, <a href="http://swiftmailer.org/">Swift Mailer</a> & <a href="http://symfony.com/components">various Symfony components</a></dt>
 					<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
-					<dt><a href="http://auraphp.com/">Aura</a>.<a href="https://github.com/auraphp/Aura.SqlQuery/">SqlQuery</a></dt>
-					<dd>by the <a href="http://auraphp.com/community">Aura community</a>,</dd>
+					<dt><a href="http://www.doctrine-project.org/projects/orm.html">Doctrine ORM</a> & <a href="http://www.doctrine-project.org/projects.html">various other Doctrine projects</a></dt>
+					<dd>by the <a href="http://www.doctrine-project.org/community.html">Doctrine community</a>,</dd>
 					<dt><a href="https://github.com/resque/resque">Resque</a> via <a href="https://github.com/vend/php-resque">vend/php-resque</a></dt>
 					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="https://github.com/vend/php-resque#contributors">various contributors</a>,</dd>
 					<dt><a href="https://github.com/thephpleague/flysystem">Flysystem</a> & <a href="https://github.com/thephpleague/oauth2-client">OAuth 2.0 Client</a></dt>
@@ -96,6 +96,7 @@
                         </div>
                     </div>
                     <div class="col-md-12 col-sm-6">
+                        <hr class="hidden-xs hidden-sm">
                         <h3 id="credits">{% trans "Credits" %}</h3>
                         <dl>
                             <dt><span class="text-muted">thanking the</span> <a href="http://ccan.de/" title="[si&#720;k&#603;n]">CCAN</a>
