improve banner presenters and add BannerValidator

--- a/app/templates/banners/banner.twig
+++ b/app/templates/banners/banner.twig
@@ -20,13 +20,18 @@
 				<form role=form" action="{{filename}}" method="post">
 					<input type="hidden" name="banner-form">
 					<input type="hidden" name="state" value="{{state}}">
-					<div class="row">
+                    <div class="row">
 						<div class="col-md-6">
 							<h3>{% trans "General" %}</h3>
 
 							<div class="form-group">
 								<label for="name">{% trans %}Name{% endtrans %}</label>
-								<input type="name" class="form-control" name="name" id="name" value="{{name}}">
+                                <div class="input-group">
+                                        <input type="name" class="form-control" name="name" id="name" maxlength="64" value="{{name}}">
+                                        <span class="input-group-addon">
+                                        <input type="checkbox" id="name-specified" name="name_specified"{% if name %} checked{% endif %}>
+                                    </span>
+                                </div>								
 							</div>
 
 							<h3>{% trans "Defaults" %}</h3>
@@ -38,7 +43,7 @@
 
 							<div class="form-group">
 								<label for="default-image-guid">{% trans %}Default image (if not set by translation){% endtrans %}</label>
-								<input type="text" class="form-control" name="default_image_guid" id="default-image-guid" value="{{default_image_guid}}">
+								<input type="text" class="form-control" name="default_image_guid" id="default-image-guid" value="{{default_image_guid}}" disabled>
 							</div>
 						</div>
 						<div class="col-md-6">
@@ -47,24 +52,22 @@
 
 							<div class="form-group">
 								<label for="show-from">{% trans %}Show from{% endtrans %}</label>
-								<input type="datetime-local" class="form-control" name="show_from" id="show-from" value="{{show_from}}">
-
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" id="from-now" name="from_now" {% if from_now %} checked{% endif %}> {% trans %}Now{% endtrans %}
-									</label>
-								</div>
-							</div>
+                                <div class="input-group">
+    								<input type="datetime-local" class="form-control" name="show_from" id="show-from" placeholder="{{show_from_placeholder}}" value="{{show_from}}">
+                                    <span class="input-group-addon">
+                                        <input type="checkbox" id="show-from-specified" name="show_from_specified"{% if show_from %} checked{% endif %}>
+                                    </span>
+                                </div>
+                            </div>
 
 							<div class="form-group">
 								<label for="show-until">{% trans %}Show until{% endtrans %}</label>
-								<input type="datetime-local" class="form-control" name="show_until" id="show-until" value="{{show_until}}">
-
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" id="until-forever" name="until_forever" {% if until_forever %} checked{% endif %}> {% trans %}Forever{% endtrans %}
-									</label>
-								</div>
+								<div class="input-group">
+    								<input type="datetime-local" class="form-control" name="show_until" id="show-until" placeholder="{{show_until_placeholder}}" value="{{show_until}}">
+                                    <span class="input-group-addon">
+                                        <input type="checkbox" id="show-until-specified" name="show_until_specified"{% if show_until %} checked{% endif %}>
+                                    </span>
+                                </div>
 							</div>
 						</div>
 					</div>
@@ -72,11 +75,12 @@
 					<div class="form-group">
 						<div class="checkbox">
 							<label>
-								<input type="checkbox" id="banner-enable" name="banner-enable" {% if enabled %} checked{% endif %}> {% trans %}Enable banner{% endtrans %}
+								<input type="checkbox" id="banner-enable" name="banner_enable" {% if enabled %} checked{% endif %}> {% trans %}Enable banner{% endtrans %}
 							</label>
 						</div>
 					</div>
 
+                    {% include 'functions/alert.twig' with {'selector' : 'banner-form'} %}
 					<p class="help-block">{% trans %}The banner won't be shown to users without a corresponding translation.{% endtrans %}</p>
 
 					<p>
@@ -102,7 +106,7 @@
 							<input type="hidden" name="add-translation-form">
 							<input type="hidden" name="state" value="{{state}}">
 							<div class="form-group">
-								<select class="input btn-sm" name="language"{% if not further_languages %} disabled{% endif %}>
+								<select class="input btn-sm" name="language" required{% if not further_languages %} disabled{% endif %}>
 								{% if further_languages %}
 									{% if further_languages|length > 1 %}<option disabled selected>{% trans %}Select language&hellip;{% endtrans %}</option>{% endif %}
 									{% for language in further_languages %}
@@ -123,3 +127,31 @@
 		</div>
 	</div>
 {% endblock%}
+
+{% block javascript %}
+    function nullField(checkbox, input, message) {
+        input.data('original-value', input.val());
+        checkbox.change(function() {
+            if($(this).is(':checked')) {
+                input.attr('type', input.data('original-type'));
+                var original = input.data('original-value');
+                input.val(original ? original : input.attr('placeholder'));
+                input.removeAttr('disabled');
+            }
+            else {
+                input.data('original-type', input.attr('type'));
+                input.attr('type', 'text');
+                input.data('original-value', input.val());
+                input.val(message);
+                input.attr('disabled', true);
+            }
+        });
+        checkbox.trigger('change');
+    }
+    
+	$(document).ready(function() {
+        nullField($('#name-specified'), $('#name'), '{% trans %}Banner #{{banner_number}}{% endtrans %}');
+        nullField($('#show-from-specified'), $('#show-from'), '{% trans "Immediately" %}');
+        nullField($('#show-until-specified'), $('#show-until'), '{% trans "Forever" %}');
+    });
+{% endblock %}
