make banner editing functional

--- a/app/templates/banners/banner.twig
+++ b/app/templates/banners/banner.twig
@@ -37,13 +37,13 @@
 							<h3>{% trans "Defaults" %}</h3>
 
 							<div class="form-group">
-								<label for="default-url">{% trans %}Default url (if not set by translation){% endtrans %}</label>
+								<label for="default-url">{% trans %}Default url{% endtrans %}</label>
 								<input type="url" class="form-control" name="default_url" id="default-url" value="{{default_url}}">
 							</div>
 
 							<div class="form-group">
-								<label for="default-image-guid">{% trans %}Default image (if not set by translation){% endtrans %}</label>
-								<input type="text" class="form-control" name="default_image_guid" id="default-image-guid" value="{{default_image_guid}}" disabled>
+								<label for="default-image-btn">{% trans %}Default image{% endtrans %}</label>
+								{% include "functions/upload-image.twig" with {name: "default_image_id", id: "default-image-id", btn: "default-image-btn"} %}
 							</div>
 						</div>
 						<div class="col-md-6">
@@ -69,14 +69,14 @@
                                     </span>
                                 </div>
 							</div>
-						</div>
-					</div>
 
-					<div class="form-group">
-						<div class="checkbox">
-							<label>
-								<input type="checkbox" id="banner-enable" name="banner_enable" {% if enabled %} checked{% endif %}> {% trans %}Enable banner{% endtrans %}
-							</label>
+							<div class="form-group">
+								<div class="checkbox">
+									<label>
+										<input type="checkbox" id="banner-enable" name="banner_enable" {% if enabled %} checked{% endif %}> {% trans %}Enable banner{% endtrans %}
+									</label>
+								</div>
+							</div>
 						</div>
 					</div>
 
@@ -128,30 +128,13 @@
 	</div>
 {% endblock%}
 
+{% set scripts = ['/resumable/resumable.js', '/lorry/js/lorry-image-upload.js'] %}
+
 {% block javascript %}
-    function nullField(checkbox, input, message) {
-        input.data('original-value', input.val());
-        checkbox.change(function() {
-            if($(this).is(':checked')) {
-                input.attr('type', input.data('original-type'));
-                var original = input.data('original-value');
-                input.val(original ? original : input.attr('placeholder'));
-                input.removeAttr('disabled');
-            }
-            else {
-                input.data('original-type', input.attr('type'));
-                input.attr('type', 'text');
-                input.data('original-value', input.val());
-                input.val(message);
-                input.attr('disabled', true);
-            }
-        });
-        checkbox.trigger('change');
-    }
-    
 	$(document).ready(function() {
-        nullField($('#name-specified'), $('#name'), '{% trans %}Banner #{{banner_number}}{% endtrans %}');
-        nullField($('#show-from-specified'), $('#show-from'), '{% trans "Immediately" %}');
-        nullField($('#show-until-specified'), $('#show-until'), '{% trans "Forever" %}');
+        setupNullField($('#name-specified'), $('#name'), '{% trans %}Banner #{{banner_number}}{% endtrans %}');
+        setupNullField($('#show-from-specified'), $('#show-from'), '{% trans "Immediately" %}');
+        setupNullField($('#show-until-specified'), $('#show-until'), '{% trans "Forever" %}');
+		setupImageUpload($('#default-image-btn'), $('#default-image-id'));
     });
 {% endblock %}
